# osc-mcp

./: README.md  pyproject.toml  server_config.json
src/oscd/: server.py
