[project]
name = "oscd"
version = "0.1.0"
description = "FastMCP server with src layout"
requires-python = ">=3.11"
dependencies = [
  "fastmcp @ git+https://github.com/jlowin/fastmcp.git@main",
]

authors = [
  { name = "Beraldo Leal", email = "bleal@redhat.com" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["uv", "setuptools"]
build-backend = "setuptools.build_meta"
